--- a/Projeto - geracao de fotos/public/index.html
+++ b/Projeto - geracao de fotos/public/index.html
@@ -1,86 +1,151 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IaHub - Gerador de Imagens</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" src="css/stylesheet.css">
-  <script src="js/renderer.js"></script>
-  <link href="https://unpkg.com/cropperjs/dist/cropper.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/cropperjs"></script>
-</head>
-<body class="bg-gray-100 text-gray-800 p-6">
-  <div class="max-w-3xl mx-auto bg-white shadow-xl rounded-xl p-8 space-y-8">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IaHub - Gerador de Imagens</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" src="css/stylesheet.css" />
+    <script src="js/renderer.js"></script>
+    <link
+      href="https://unpkg.com/cropperjs/dist/cropper.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/cropperjs"></script>
+  </head>
+  <body class="bg-gray-100 text-gray-800 p-6">
+    <div class="max-w-3xl mx-auto bg-white shadow-xl rounded-xl p-8 space-y-8">
+      <!-- Cabeçalho -->
+      <header class="text-center">
+        <h1 class="text-3xl font-bold text-blue-700">
+          🎨 IAHub - Gerador de Imagens
+        </h1>
+        <p class="text-gray-500 mt-1">
+          Crie imagens com IA com sua API Key pessoal
+        </p>
+      </header>
 
-    <!-- Cabeçalho -->
-    <header class="text-center">
-      <h1 class="text-3xl font-bold text-blue-700">🎨 IAHub - Gerador de Imagens</h1>
-      <p class="text-gray-500 mt-1">Crie imagens com IA com sua API Key pessoal</p>
-    </header>
+      <!-- Modal de Cadastro -->
+      <div
+        id="modal-cadastro"
+        class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden"
+      >
+        <div class="bg-white rounded-lg p-6 max-w-md w-full shadow-lg">
+          <h2 class="text-xl font-bold mb-4">Cadastro Inicial</h2>
+          <form id="modal-usuario-form" class="space-y-4">
+            <div class="flex flex-col">
+              <label for="modal-nome" class="font-medium">Nome</label>
+              <input
+                type="text"
+                id="modal-nome"
+                required
+                class="border border-gray-300 rounded px-3 py-2"
+              />
+            </div>
+            <div class="flex flex-col">
+              <label for="modal-apiKey" class="font-medium">API Key</label>
+              <input
+                type="password"
+                id="modal-apiKey"
+                required
+                class="border border-gray-300 rounded px-3 py-2"
+              />
+            </div>
+            <div class="flex justify-end space-x-2 pt-2">
+              <button
+                type="submit"
+                class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
+              >
+                Salvar
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <!-- Exibir dados do usuário -->
+      <div
+        id="dados-usuario"
+        class="bg-blue-100 border border-blue-300 text-blue-800 rounded p-4 mt-4 hidden"
+      >
+        <p><strong>Usuário:</strong> <span id="usuario-nome"></span></p>
+        <p><strong>API Key:</strong> <span id="usuario-key"></span></p>
+      </div>
 
-  <!-- Modal de Cadastro -->
-<div id="modal-cadastro" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
-  <div class="bg-white rounded-lg p-6 max-w-md w-full shadow-lg">
-    <h2 class="text-xl font-bold mb-4">Cadastro Inicial</h2>
-    <form id="modal-usuario-form" class="space-y-4">
-      <div class="flex flex-col">
-        <label for="modal-nome" class="font-medium">Nome</label>
-        <input type="text" id="modal-nome" required class="border border-gray-300 rounded px-3 py-2" />
-      </div>
-      <div class="flex flex-col">
-        <label for="modal-apiKey" class="font-medium">API Key</label>
-        <input type="password" id="modal-apiKey" required class="border border-gray-300 rounded px-3 py-2" />
-      </div>
-      <div class="flex justify-end space-x-2 pt-2">
-        <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Salvar</button>
-      </div>
-    </form>
-  </div>
-</div>
-<!-- Exibir dados do usuário -->
-<div id="dados-usuario" class="bg-blue-100 border border-blue-300 text-blue-800 rounded p-4 mt-4 hidden">
-  <p><strong>Usuário:</strong> <span id="usuario-nome"></span></p>
-  <p><strong>API Key:</strong> <span id="usuario-key"></span></p>
-</div>
-
-    <!-- Gerador de Imagem -->
-    <section>
-      <h2 class="text-2xl font-bold mb-4">🧠 Gerar Imagem</h2>
+      <!-- Gerador de Imagem -->
+      <section>
+        <h2 class="text-2xl font-bold mb-4">🧠 Gerar Imagem</h2>
         <div class="flex flex-col">
           <label for="prompt" class="mb-1 font-medium">Prompt</label>
-          <input type="text" id="prompt" required placeholder="Descreva a imagem..." class="border border-gray-300 rounded-lg px-3 py-2 focus:ring focus:outline-none" />
+          <input
+            type="text"
+            id="prompt"
+            required
+            placeholder="Descreva a imagem..."
+            class="border border-gray-300 rounded-lg px-3 py-2 focus:ring focus:outline-none"
+          />
         </div>
-        <button  id="btnGerarImagem" class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition">Gerar</button>
-    </section>
+        <button
+          id="btnGerarImagem"
+          class="mt-2 bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition"
+        >
+          Gerar
+        </button>
+      </section>
 
-    <!-- Histórico -->
-    <section>
-      <h2 class="text-2xl font-bold mb-4">📁 Histórico de Imagens</h2>
-      <ul id="historico-list" class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
-        <!-- imagens renderizadas dinamicamente -->
-      </ul>
-    </section>
-  </div>
-
-<!-- Modal de Imagem Ampliada -->
-<div id="imagem-modal" class="hidden fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50">
-  <div class="relative">
-    <button id="fechar-modal" aria-label="Fechar modal" class="...">&times;</button>
-    <img id="imagem-ampliada" src="" class="max-w-full max-h-screen rounded" />
-  </div>
-</div>
-<div id="editar-modal" class="hidden fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50">
-  <div class="bg-white rounded-lg p-4 max-w-3xl w-full relative">
-    <button id="fechar-editar-modal" class="absolute top-2 right-2 text-2xl">&times;</button>
-    <h2 class="text-xl font-bold mb-4">Editar Imagem</h2>
-    <img id="editar-img" class="max-w-full max-h-[70vh]" />
-    <div class="mt-4 flex justify-end gap-2">
-      <button id="salvar-editada" class="bg-green-600 text-white px-4 py-2 rounded">Salvar</button>
+      <!-- Histórico -->
+      <h2 class="text-2xl font-bold mb-4 text-center">
+        📁 Histórico de Imagens
+      </h2>
+      <section
+        class="flex flex-col items-center justify-start max-h-[47vh] overflow-y-auto p-4"
+      >
+        <ul
+          id="historico-list"
+          class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3"
+        >
+          <!-- imagens renderizadas dinamicamente -->
+        </ul>
+      </section>
     </div>
-  </div>
-</div>
 
-
-</body>
+    <!-- Modal de Imagem Ampliada -->
+    <div
+      id="imagem-modal"
+      class="hidden fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50"
+    >
+      <div class="relative">
+        <button id="fechar-modal" aria-label="Fechar modal" class="...">
+          &times;
+        </button>
+        <img
+          id="imagem-ampliada"
+          src=""
+          class="max-w-full max-h-screen rounded"
+        />
+      </div>
+    </div>
+    <div
+      id="editar-modal"
+      class="hidden fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50"
+    >
+      <div class="bg-white rounded-lg p-4 max-w-3xl w-full relative">
+        <button
+          id="fechar-editar-modal"
+          class="absolute top-2 right-2 text-2xl"
+        >
+          &times;
+        </button>
+        <h2 class="text-xl font-bold mb-4">Editar Imagem</h2>
+        <img id="editar-img" class="max-w-full max-h-[70vh]" />
+        <div class="mt-4 flex justify-end gap-2">
+          <button
+            id="salvar-editada"
+            class="bg-green-600 text-white px-4 py-2 rounded"
+          >
+            Salvar
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
